got the dropdown menu working on curriculum page, still having issue with background shifting..

--- a/_sass/minima/curriculum.sass
+++ b/_sass/minima/curriculum.sass
@@ -94,12 +94,12 @@
 
 .curriculum__dot-bg
   content: ""
-  height: 615px
+  height: 620px
   width: 100%
   position: absolute
   bottom: 0
   z-index: -1
   background: url(../img/bg_dots-half@2x.png)
-  background-size: 773px auto
+  background-size: contain
   background-repeat: repeat-x
   display: inline-block
