--- a/_sass/minima/page.sass
+++ b/_sass/minima/page.sass
@@ -2,7 +2,8 @@
   width: 100%
   position: relative
   height: 320px
-  background: url(../img/hero-bg-img@2x.png) center center no-repeat
+  background: url(../img/hero-bg-img.png) center center no-repeat
+  background-image: -webkit-image-set(url('../img/hero-bg-img.png') 1x, url('../img/hero-bg-img@2x.jpg') 2x)
   background-size: cover
 
 .page-hero__title-container
